NEURAL AIが対局時にもMCTS(PUCT探索)で手を選ぶように変更
これまでNeuralAi.chooseMoveは方策ネットワークの出力をそのまま貪欲法で選んでいたが、
学習側（yonmoku_nn/mcts.py）は「ネットワーク+MCTS探索」の強さを前提に自己対戦データを
集めている。対局時に探索なしでは学習された本来の強さが出ないため、同じPUCTアルゴリズムを
NeuralMcts.javaとしてJavaに移植し、対局のたびにこの場でシミュレーションして手を選ぶように
した（GameRoom.resolveMoveベースの軽量な先読みで、既存のGomokuAiのミニマックス探索と同様、
ダメージ増加マーク設置イベントは考慮しない簡略化）。

- NeuralEncoder.encode: GameStateSnapshot以外の生フィールドからもテンソルを作れるように
  オーバーロードを追加（NeuralMctsの先読みノードはGameStateSnapshotを持たないため）。
- NeuralAi: ONNXセッションの生の推論結果（方策ロジット・価値）を返すinferを追加し、
  chooseMoveはNeuralMctsに委譲する形にした。
- neural.mcts.simulations/neural.mcts.c-puct（環境変数はNEURAL_MCTS_SIMULATIONS/
  NEURAL_MCTS_C_PUCT）で探索の強さと1手あたりの応答時間のバランスを調整できる。

実際のONNXモデルで対局を作り、1手あたり約0.6〜0.8秒（TEST3の持ち時間予算と同程度）で
応答し、エラーなく最後まで進行することを確認済み。

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01GG8ru6e16w126p8J7ojd88